[gd_scene load_steps=2 format=3 uid="uid://cqrjpnbwvpvr6"]

[ext_resource type="Script" path="res://scenes/pause_menu/pause_menu.gd" id="1_i2vxf"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1472.0
offset_bottom = 680.0
script = ExtResource("1_i2vxf")

[node name="PauseMenuItems" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 208.0
offset_right = 747.0
offset_bottom = 309.0

[node name="Resume" type="Button" parent="PauseMenuItems"]
layout_mode = 2
text = "Resume"
metadata/_edit_lock_ = true

[node name="Restart" type="Button" parent="PauseMenuItems"]
layout_mode = 2
text = "Restart"
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="PauseMenuItems"]
layout_mode = 2
text = "Quit"
metadata/_edit_lock_ = true

[connection signal="pressed" from="PauseMenuItems/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenuItems/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseMenuItems/Quit" to="." method="_on_quit_pressed"]
